--- a/sass/buttons.scss
+++ b/sass/buttons.scss
@@ -2,7 +2,7 @@
  * Buttons
  * --------------------------------
  */
-
+button,
 .button {
     border-radius: $button-border-radius;
     color: $button-text-color;
@@ -13,16 +13,19 @@
     title-edge-top-inset: 1pt;
 }
 
+button:highlighted,
 .button:highlighted {
     background-color: $button-bg-color-highlighted;
     border-radius: $button-border-radius;
 }
 
+button.large,
 .button.large {
     font-size: $button-text-size-large;
     title-edge-top-inset: 2pt;
 }
 
+button.small,
 .button.small {
     font-size: $button-text-size-small;
     title-edge-top-inset: 2pt;
